# bkamins_sir_abm

./: Cargo.toml  RADME.md  README.md  use_references_result.md
bm_md/: basic_reimpl_result.md  clone_mut_references.md  no_clone_mut_references.md
src/: julia_reimpl.rs  lib.rs  main.rs
