[package]
name = "bkamins_sir_abm"
version = "0.1.0"
authors = ["Mossa Merhi Reimert <mossa@sund.ku.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
rand = "0.7.3"
maplit = "1.0.2"
rand_distr = "0.2.2"
soa_derive = "0.8.1"
plotly = "0.6.0"
itertools = "0.9.0"
